fix label overflow

--- a/src/AtmosphericDiagnostics.pcss
+++ b/src/AtmosphericDiagnostics.pcss
@@ -10,6 +10,7 @@
 }
 
 svg {
-  width:100%;
+  width:80%;
   height:300px;
+  padding: 28px;
 }
